src/sonare_c.h

// Error codes
typedef enum {
  SONARE_OK = 0,
  SONARE_ERROR_FILE_NOT_FOUND = 1,
  SONARE_ERROR_INVALID_FORMAT = 2,
  SONARE_ERROR_DECODE_FAILED = 3,
  SONARE_ERROR_INVALID_PARAMETER = 4,
  SONARE_ERROR_OUT_OF_MEMORY = 5,
  SONARE_ERROR_UNKNOWN = 99
} SonareError;
void sonare_free_string(char* ptr);
// Error handling
const char* sonare_error_message(SonareError error);
/// @brief Returns the detailed message for the most recent error on the calling thread.
/// @details The returned string is owned by libsonare and valid until the next API call on
///   the same thread that records or clears an error. Returns an empty string ("") when no
///   detailed message has been recorded. The pointer is never NULL.
/// @return Pointer to a NUL-terminated thread-local message string.
const char* sonare_last_error_message(void);
// Version
const char* sonare_version(void);
/// @brief Returns 1 if libsonare was compiled with FFmpeg-backed decoding for
///        M4A/AAC/FLAC/OGG, 0 otherwise.
/// @details This reflects the value of the @c SONARE_WITH_FFMPEG CMake option at
///   build time. Language bindings expose this so test suites can conditionally
///   exercise the FFmpeg decode path without false failures.
int sonare_has_ffmpeg_support(void);