include/sonare/sonare_c_features.h

/// @brief Extracts the melody contour with selectable tracker.
/// @param threshold Aperiodicity cutoff on the cumulative mean normalized
///   difference function, NOT a level in the units of @p samples. Normalized by
///   construction and therefore scale-free. Must be within (0, 1]; anything
///   else is rejected with @c SONARE_ERROR_INVALID_PARAMETER, and 0.1 is the
///   default. Its MEANING depends on @p use_pyin: for plain YIN it is the
///   single cutoff a frame's CMNDF minimum must fall below, while for pYIN it
///   is the UPPER BOUND of the swept threshold distribution — see
///   @ref sonare_pitch_pyin.
/// @param use_pyin Non-zero selects the pYIN tracker (Viterbi-smoothed, less
///   octave-jumpy) instead of plain per-frame YIN.
/// @param center When use_pyin is set, non-zero zero-pads by frame_length/2
///   so frame i is centered at i*hop_length (matches librosa.pyin(center=True));
///   zero left-aligns. Ignored when use_pyin is 0 (plain YIN is always
///   left-aligned).
SonareError sonare_analyze_melody_ex(const float* samples, size_t length, int sample_rate,
                                     float fmin, float fmax, int frame_length, int hop_length,
                                     float threshold, int use_pyin, int center,
                                     SonareMelodyResult* out);