bindings/python/src/libsonare/_ffi_signatures_core.py


    # sonare_error_message
    lib.sonare_error_message.restype = ctypes.c_char_p
    lib.sonare_error_message.argtypes = [ctypes.c_int32]

    # sonare_last_error_message: returns the detailed thread-local message for the
    # most recent error. Returns an empty (but non-NULL) string when nothing has been
    # recorded. Only meaningful when a preceding C API call returned non-OK.
    lib.sonare_last_error_message.restype = ctypes.c_char_p
    lib.sonare_last_error_message.argtypes = []

    # --- Version ---

    # sonare_version
    lib.sonare_version.restype = ctypes.c_char_p
    lib.sonare_version.argtypes = []

    # sonare_abi_version: aggregate ABI version folding every subsystem ABI macro
    # into one 32-bit value (see sonare_c.h).
    if hasattr(lib, "sonare_abi_version"):
        lib.sonare_abi_version.restype = ctypes.c_uint32
        lib.sonare_abi_version.argtypes = []

    lib.sonare_engine_abi_version.restype = ctypes.c_uint32
    lib.sonare_engine_abi_version.argtypes = []

    lib.sonare_voice_changer_abi_version.restype = ctypes.c_uint32
    lib.sonare_voice_changer_abi_version.argtypes = []

    # sonare_has_ffmpeg_support: returns 1 if the shared library was compiled
    # with FFmpeg-backed decoding for M4A/AAC/FLAC/OGG, 0 otherwise.
    lib.sonare_has_ffmpeg_support.restype = ctypes.c_int
    lib.sonare_has_ffmpeg_support.argtypes = []

    # --- Full analysis JSON ---

    # sonare_analyze_json: full analysis serialized to a heap-allocated camelCase
    # JSON string. Free *out_json with sonare_free_string.
    if hasattr(lib, "sonare_analyze_json"):
        lib.sonare_analyze_json.restype = ctypes.c_int32
        lib.sonare_analyze_json.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_char_p),
        ]

    # sonare_analyze_json_with_progress: same as sonare_analyze_json but emits
    # progress callbacks. The callback signature is:
    #   void (*)(float progress, const char* stage, void* user_data)
    if hasattr(lib, "sonare_analyze_json_with_progress"):
        lib.sonare_analyze_json_with_progress.restype = ctypes.c_int32
        lib.sonare_analyze_json_with_progress.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            SonareAnalyzeProgressCallback,
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_char_p),
        ]

    # sonare_analyze_melody_ex: melody contour with selectable tracker (YIN/pYIN)
    # and center-padding option.
    if hasattr(lib, "sonare_analyze_melody_ex"):
        lib.sonare_analyze_melody_ex.restype = ctypes.c_int32
        lib.sonare_analyze_melody_ex.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(SonareMelodyResult),
        ]

    # sonare_free_string: free a heap-allocated C string (e.g. JSON output).
    if hasattr(lib, "sonare_free_string"):
        lib.sonare_free_string.restype = None
        lib.sonare_free_string.argtypes = [ctypes.c_char_p]
